# ferx

./: .dockerignore  .gitignore  CLAUDE.md  DESCRIPTION  Dockerfile  INSTALL-SYSADMIN.md  LICENSE  LICENSE.md  NAMESPACE  PROJECT_REFERENCE.md  README.md  TRUST_REGION_NOTES.md
R/: diagnostics.R  example.R  extendr-wrappers.R  ferx-package.R  fit.R  simulate.R  trace.R  zzz.R
examples/: ex1_warfarin.R
inst/examples/: ex1_warfarin.R  ex1a_warfarin_bloq.R  ex2_two_cmt_iv.R  ex3_two_cmt_oral_cov.R  ex4_mm_oral.R
man/: ferx-package.Rd  ferx_example.Rd  ferx_fit.Rd  ferx_predict.Rd  ferx_simulate.Rd
src/: Makevars  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: lib.rs
