[package]
name = "ferx"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["InsightRX, Inc."]

[lib]
crate-type = ["staticlib"]

[features]
default = ["autodiff"]
autodiff = ["ferx-nlme/autodiff"]
ci = ["ferx-nlme/ci"]

[dependencies]
extendr-api = "0.7"
ferx-nlme = { path = "../../../ferx-nlme", default-features = false }
nalgebra = "0.33"

[profile.release]
lto = "thin"
